kubernetes/projects/core/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: axolotl
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
  - name: axolotl-cloud
    hostname: axolotl.cloud
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: axolotl-cloud-tls
  - name: wildcard-axolotl-cloud
    hostname: "*.axolotl.cloud"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: axolotl-cloud-tls
  - name: wildcard-lan-axolotl-cloud
    hostname: "*.lan.axolotl.cloud"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: axolotl-cloud-tls
